--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -237,9 +237,8 @@
                                     <constraint firstAttribute="width" constant="145" id="ChP-lQ-bun"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGm-mH-n4l">
-                                <rect key="frame" x="363" y="411" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGm-mH-n4l">
+                                <rect key="frame" x="309" y="403" width="150" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -256,9 +255,11 @@
                             <constraint firstItem="gq6-M0-8ca" firstAttribute="leading" secondItem="eG5-jY-ANL" secondAttribute="leading" id="GHa-cU-uV9"/>
                             <constraint firstItem="zas-NQ-Xg5" firstAttribute="leading" secondItem="GH1-R8-VeX" secondAttribute="trailing" constant="79" id="IXY-eh-pjI"/>
                             <constraint firstItem="bi4-ko-f03" firstAttribute="top" secondItem="GH1-R8-VeX" secondAttribute="bottom" constant="55" id="Iwr-nr-qna"/>
+                            <constraint firstItem="hGm-mH-n4l" firstAttribute="leading" secondItem="eG5-jY-ANL" secondAttribute="leading" constant="309" id="Ked-oI-zvQ"/>
                             <constraint firstItem="S3U-ym-ifh" firstAttribute="top" secondItem="eG5-jY-ANL" secondAttribute="top" constant="15" id="M4U-CK-63s"/>
                             <constraint firstItem="KGO-Z9-8ba" firstAttribute="top" secondItem="eG5-jY-ANL" secondAttribute="top" constant="226" id="NCR-GQ-Qhj"/>
                             <constraint firstItem="qpX-6K-sAW" firstAttribute="top" secondItem="eG5-jY-ANL" secondAttribute="top" constant="220" id="Qbh-wo-5wH"/>
+                            <constraint firstItem="hGm-mH-n4l" firstAttribute="top" secondItem="GH1-R8-VeX" secondAttribute="bottom" constant="172" id="RQn-oQ-aIR"/>
                             <constraint firstItem="oFT-dD-cqn" firstAttribute="leading" secondItem="eG5-jY-ANL" secondAttribute="leading" constant="241" id="ZgE-1G-ohC"/>
                             <constraint firstItem="gq6-M0-8ca" firstAttribute="top" secondItem="eG5-jY-ANL" secondAttribute="top" constant="404" id="ayw-kN-46z"/>
                             <constraint firstItem="oFT-dD-cqn" firstAttribute="leading" secondItem="qpX-6K-sAW" secondAttribute="trailing" constant="28" id="g14-Tj-Fow"/>
@@ -269,6 +270,7 @@
                             <constraint firstItem="eG5-jY-ANL" firstAttribute="trailing" secondItem="KGO-Z9-8ba" secondAttribute="trailing" constant="666" id="rwX-pI-K7l"/>
                             <constraint firstItem="KGO-Z9-8ba" firstAttribute="leading" secondItem="eG5-jY-ANL" secondAttribute="leading" constant="20" id="sWu-dm-IM9"/>
                             <constraint firstItem="oFT-dD-cqn" firstAttribute="top" secondItem="GH1-R8-VeX" secondAttribute="bottom" constant="57" id="t1K-SI-gW7"/>
+                            <constraint firstItem="eG5-jY-ANL" firstAttribute="trailing" secondItem="hGm-mH-n4l" secondAttribute="trailing" constant="309" id="wha-3T-rJ5"/>
                             <constraint firstItem="zas-NQ-Xg5" firstAttribute="top" secondItem="eG5-jY-ANL" secondAttribute="top" constant="67" id="xie-g7-NtP"/>
                             <constraint firstItem="eG5-jY-ANL" firstAttribute="trailing" secondItem="gq6-M0-8ca" secondAttribute="trailing" id="zQr-TO-EFv"/>
                         </constraints>
@@ -286,7 +288,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OSN-Rl-W11" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1816.40625" y="1130.859375"/>
+            <point key="canvasLocation" x="2212" y="420"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="yz6-Xg-6dH">
@@ -315,7 +317,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FmA-4c-trw" customClass="ImageDisplay" customModule="Pictation" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="32" width="616" height="100"/>
+                                <rect key="frame" x="0.0" y="76" width="616" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="qvS-yH-gip"/>
                                 </constraints>
@@ -326,7 +328,7 @@
                                 </userDefinedRuntimeAttributes>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="GqA-Ty-Qvm">
-                                <rect key="frame" x="657" y="87" width="60" height="100"/>
+                                <rect key="frame" x="657" y="131" width="60" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4pj-9k-MQt">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
@@ -357,13 +359,13 @@
                                 </constraints>
                             </stackView>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XAh-eu-VYf">
-                                <rect key="frame" x="190" y="142" width="388" height="45"/>
+                                <rect key="frame" x="190" y="186" width="388" height="45"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7dC-py-Eu8">
-                                <rect key="frame" x="395" y="242" width="140" height="30"/>
+                                <rect key="frame" x="395" y="286" width="140" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGU-vT-Kyh">
                                         <rect key="frame" x="0.0" y="0.0" width="42" height="30"/>
@@ -392,7 +394,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Fk-Ca-HzI">
-                                <rect key="frame" x="243" y="360" width="89" height="30"/>
+                                <rect key="frame" x="243" y="404" width="89" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="89" id="s3r-lE-x23"/>
                                     <constraint firstAttribute="height" constant="30" id="t0y-5j-aqV"/>
@@ -402,7 +404,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qz2-pM-nSw">
-                                <rect key="frame" x="332" y="360" width="89" height="30"/>
+                                <rect key="frame" x="332" y="404" width="89" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="BkM-5p-E3k"/>
                                     <constraint firstAttribute="width" constant="89" id="EjJ-Jq-cHc"/>
@@ -412,7 +414,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWG-5p-VGh">
-                                <rect key="frame" x="421" y="360" width="89" height="30"/>
+                                <rect key="frame" x="421" y="404" width="89" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="89" id="6ll-ZV-C7t"/>
                                     <constraint firstAttribute="height" constant="30" id="aC4-ml-g8Z"/>
@@ -422,25 +424,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speech Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sjl-E2-wQJ">
-                                <rect key="frame" x="20" y="246" width="87" height="17"/>
+                                <rect key="frame" x="20" y="290" width="87" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="eIm-xf-mld">
-                                <rect key="frame" x="113" y="242" width="118" height="31"/>
+                                <rect key="frame" x="113" y="286" width="118" height="31"/>
                                 <connections>
                                     <action selector="adjustSpeakRateButton:" destination="ZfP-XQ-GJu" eventType="valueChanged" id="Uyf-5P-jcw"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="as5-bg-vyV">
-                                <rect key="frame" x="243" y="246" width="20.5" height="20.5"/>
+                                <rect key="frame" x="243" y="290" width="20.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WIl-B9-Gwj">
-                                <rect key="frame" x="0.0" y="424" width="768" height="600"/>
+                                <rect key="frame" x="0.0" y="468" width="768" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="0ou-NX-zRl">
                                     <size key="itemSize" width="100" height="100"/>
@@ -699,7 +701,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jei-LM-tpz">
-                                <rect key="frame" x="20" y="43" width="728" height="44"/>
+                                <rect key="frame" x="20" y="87" width="728" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="alu-VB-LN0"/>
                                 </constraints>
@@ -796,7 +798,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Keq-Pd-tLt"/>
+        <segue reference="LBc-jJ-fQO"/>
         <segue reference="2U3-2p-Ijy"/>
         <segue reference="MpU-hq-Oov"/>
     </inferredMetricsTieBreakers>
